# async-distributed-adaptation

./: Asynchronous Distributed ML Adaptation (FL_TTA) (1).md  PP-DMA：Privacy-Preserving Distributed Model Adaptation.md  README.md
Docx/: future_directions.md  pathMNIST_experiment_log.md  swarm_learning_integration.md
llm/: EXPERIMENT_COMPLETENESS_AUDIT.md  README.md  REPORT_NOTES.md  SURVEY_NOTES.md
llm/presentation/: clockless_federated_adaptation_proposal_zh.html  polish_diagram_assets.py  refine_proposal_visuals.py  speaker_notes_en.md  speaker_notes_zh.md
pathMNIST/: .gitignore  README.md  pyproject.toml
pathMNIST/src/fed_pathmnist/: client.py  data.py  model.py  run.py  simulation.py
pathMNIST/src/pathmnist_shared/: __init__.py  data.py  model.py
pathMNIST/src/swarm_pathmnist/: __init__.py  merge.py  node.py  partition.py  run.py  simulation.py
r13946001/: FINAL_RESULTS_SUMMARY.md  NOVELTY_ASSESSMENT.md  README.md  REPORT_NOTES.md  SURVEY_NOTES.md
r13946001/pathMNIST/: .gitignore  README.md  pyproject.toml
r13946001/pathMNIST/scripts/: plot_classification_results.py  plot_distributed_systems_summary.py  plot_report_summary.py  plot_seeded_summary.py  run_distributed_systems_24h.sh  run_full_fair_matrix_completion.sh  run_missing_seed_completion.sh  summarize_results.py
r13946001/pathMNIST/src/fed_pathmnist/: client.py  data.py  experiment_logging.py  model.py  run.py  simulation_ext.py
r13946001/presentation/: README.md  clockless_federated_adaptation_proposal_en.html  clockless_federated_adaptation_proposal_en.md  (+3 more)
(+12 files in other folders)
