[project]
name = "pathmnist-flower-final"
version = "0.1.0"
description = "PathMNIST distributed learning experiments with federated and swarm-style decentralized training."
requires-python = ">=3.10,<3.14"
dependencies = [
    "flwr>=1.8.0",
    "medmnist>=3.0.0",
    "numpy>=1.24.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
]

[project.scripts]
fed-pathmnist = "fed_pathmnist.run:main"
swarm-pathmnist = "swarm_pathmnist.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
