[project]
name = "pathmnist-flower-final"
version = "0.1.0"
description = "Federated PathMNIST experiments with ResNet18, Flower clients, and sync/async aggregation."
requires-python = ">=3.10,<3.14"
dependencies = [
    "flwr>=1.8.0",
    "medmnist>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
]

[project.scripts]
fed-pathmnist = "fed_pathmnist.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
